--- a/public/css/app.css
+++ b/public/css/app.css
@@ -549,6 +549,18 @@ Ensure the default browser behavior of the `hidden` attribute.
 .hidden {
   display: none;
 }
+.aspect-auto {
+  aspect-ratio: auto;
+}
+.aspect-video {
+  aspect-ratio: 16 / 9;
+}
+.aspect-\[2\/3\] {
+  aspect-ratio: 2 / 3;
+}
+.aspect-\[3\/2\] {
+  aspect-ratio: 3 / 2;
+}
 .h-full {
   height: 100%;
 }
@@ -573,6 +585,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .w-4 {
   width: 1rem;
 }
+.w-full {
+  width: 100%;
+}
 .flex-1 {
   flex: 1 1 0%;
 }
@@ -595,6 +610,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+.flex-col {
+  flex-direction: column;
 }
 .items-center {
   align-items: center;
@@ -650,6 +668,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-top-right-radius: 0.375rem;
   border-bottom-right-radius: 0.375rem;
 }
+.rounded-t-2xl {
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+}
 .border-2 {
   border-width: 2px;
 }
@@ -661,6 +683,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .border-b {
   border-bottom-width: 1px;
+}
+.border-b-2 {
+  border-bottom-width: 2px;
 }
 .border-slate-50 {
   --tw-border-opacity: 1;
