--- a/public/css/app.css
+++ b/public/css/app.css
@@ -479,11 +479,29 @@ Ensure the default browser behavior of the `hidden` attribute.
   position: -webkit-sticky;
   position: sticky;
 }
+.inset-0 {
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+}
 .top-0 {
   top: 0px;
 }
 .bottom-12 {
   bottom: 3rem;
+}
+.bottom-0 {
+  bottom: 0px;
+}
+.bottom-4 {
+  bottom: 1rem;
+}
+.bottom-6 {
+  bottom: 1.5rem;
+}
+.bottom-8 {
+  bottom: 2rem;
 }
 .z-0 {
   z-index: 0;
@@ -537,6 +555,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .-ml-px {
   margin-left: -1px;
 }
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
 .block {
   display: block;
 }
@@ -563,6 +584,15 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .aspect-\[3\/2\] {
   aspect-ratio: 3 / 2;
+}
+.aspect-\[1\/3\] {
+  aspect-ratio: 1 / 3;
+}
+.aspect-\[3\/1\] {
+  aspect-ratio: 3 / 1;
+}
+.aspect-\[4\/1\] {
+  aspect-ratio: 4 / 1;
 }
 .h-full {
   height: 100%;
@@ -777,6 +807,22 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-gradient-from: rgb(243 244 246 / 0.9);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(243 244 246 / 0));
 }
+.from-black {
+  --tw-gradient-from: #000;
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(0 0 0 / 0));
+}
+.from-\[\#914C94\/50\] {
+  --tw-gradient-from: #914C94 / 50;
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(255 255 255 / 0));
+}
+.from-\[\#914C94\] {
+  --tw-gradient-from: #914C94;
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(145 76 148 / 0));
+}
+.from-\[rgba\(146\2c 76\2c 148\2c 0\.5\)\] {
+  --tw-gradient-from: rgba(146,76,148,0.5);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(146 76 148 / 0));
+}
 .to-wisteria {
   --tw-gradient-to: #BA66BD;
 }
@@ -785,6 +831,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .to-white\/90 {
   --tw-gradient-to: rgb(255 255 255 / 0.9);
+}
+.to-\[rgba\(14\2c 91\2c 182\2c 0\.5\)\] {
+  --tw-gradient-to: rgba(14,91,182,0.5);
 }
 .object-cover {
   -o-object-fit: cover;
@@ -823,6 +872,18 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-left: 0.5rem;
   padding-right: 0.5rem;
 }
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
 .pt-14 {
   padding-top: 3.5rem;
 }
@@ -843,6 +904,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .pt-12 {
   padding-top: 3rem;
+}
+.pb-2 {
+  padding-bottom: 0.5rem;
+}
+.pb-3 {
+  padding-bottom: 0.75rem;
 }
 .text-right {
   text-align: right;
@@ -866,6 +933,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 .font-light {
   font-weight: 300;
@@ -921,6 +992,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .shadow-sm {
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .ring-gray-300 {
